--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all contributors to the repository.
+# This file lists all contributors to the repository
 
 Anthoine Dzimah <dzimahanthoine@gmail.com>
-Oluwatumise Asere
+Oluwatumise Asere <asereoluwatumise@gmail.com>
